<resources>
    <string name="app_name">IApprove</string>
    <string name="title_activity_account_setting_for_first" translatable="false">AccountSetting4FirstActivity</string>
    <string name="as4f_applicationDescription">Enjoy working while walking</string>
    <string name="as4f_applicationLaunch_imageViewDescription" translatable="false">application launch imageView</string>
    <string name="as4f_accountRegister_button_title">Register</string>
    <string name="as4f_accountLogin_button_title">Login</string>
    <string name="title_activity_account_register" translatable="false">AccountRegisterActivity</string>
    <string name="title_activity_account_login" translatable="false">AccountLoginActivity</string>
    <string name="account_login_nav_title_text">Login Approve</string>
    <string name="al_confirmLogin_button_title">Login</string>
    <string name="al_userLoginPhone_label">Account</string>
    <string name="al_userLoginPhone_editText_hint">phone number</string>
    <string name="al_userLoginPwd_label">Password</string>
    <string name="al_userLoginPwd_editText_hint">password</string>
    <string name="al_forgetPwd_button_title">Forget pwd?</string>
    <string name="al_loginAsyncHttpReq_progDlg_message">Logining, please wait&#8230;</string>
    <string name="title_activity_account_retrieve_pwd" translatable="false">AccountRetrievePwdActivity</string>
    <string name="title_activity_iapprove_tab" translatable="false">IApproveTabActivity</string>
    <string name="naaGenerate_loadingEnterpriseForm_progDlg_message">Loading, please wait&#8230;</string>
    <string name="title_activity_enterprise_form_type_list" translatable="false">EnterpriseFormTypeListActivity</string>
    <string name="eft6f_cancel_barButtonItem_title">Cancel</string>
    <string name="title_activity_enterprise_form_list" translatable="false">EnterpriseFormListActivity</string>
    <string name="title_activity_new_approve_application" translatable="false">NewApproveApplicationActivity</string>
    <string name="naa_form_info_label">Form Info</string>
    <string name="naa_formItem_info_notWrite">Not write</string>
    <string name="naa_formItem_infoLabel_capitalFormat">%s(Capital)</string>
    <string name="naa_attachment_info_label">Attachment Info</string>
    <string name="naa_imageAttachment_imageView_contentDescription" translatable="false">new approve application image attachment imageView</string>
    <string name="naa_voiceAttachment_play_imageView_contentDescription" translatable="false">new approve application image attachment play imageView</string>
    <string name="naa_voiceAttachment_voiceDuration_format" translatable="false">%d\"</string>
    <string name="naa_submitContact_label_textView_text">Recipient:</string>
    <string name="naa_add_submitContact_imageButton_contentDescription" translatable="false">new approve application add new submit contact imageButton</string>
    <string name="naa_textAudio_inputModeChange_imageButton_contentDescription" translatable="false">new approve application the text and audio attachment change imageButton</string>
    <string name="naa_morePlusInput_imageButton_contentDescription" translatable="false">new approve application more plus attachment imageButton</string>
    <string name="naa_toggleAudioRecording_button_normal_title">Hold to talk</string>
    <string name="naa_toggleAudioRecording_button_pressed_title">Release to send</string>
    <string name="naa_voiceRecord_cancelRecord6RecordTooShort_imageView_contentDescription" translatable="false">new approve application voice attachment voice record cancel record or record too short imageView</string>
    <string name="naa_voiceRecord_recording_imageView_contentDescription" translatable="false">new approve application voice attachment voice record recording imageView</string>
    <string name="naa_voiceRecord_recordingVoiceAmp_imageView_contentDescription" translatable="false">new approve application voice attachment voice record recording voice amp imageView</string>
    <string name="naa_voiceRecord_voiceDuration_tooShort">Voice duration is too short</string>
    <string name="naa_voiceRecord_recording">Move up to cancel</string>
    <string name="naa_voiceRecord_cancelRecord">Release to cancel</string>
    <string name="naa_noteSend_button_title">Send</string>
    <string name="naa_morePlus_input_item_icon_imageButton_contentDescription" translatable="false">new approve application more plus input item icon imageButton</string>
    <string name="naa_morePlus_photosInput_label">Photos</string>
    <string name="naa_morePlus_photosInput_photosSelect_title">Select photos</string>
    <string name="naa_morePlus_cameraInput_label">Camera</string>
    <string name="naa_morePlus_applicationsInput_label">Apps</string>
    <string name="naa6tdt_submitContactSelect_slidingDrawer_handleNav_cancelSelectSubmitConatcts_imageButton_contentDescription" translatable="false">new approve application or to-do list task approve cancel select contacts imageButton</string>
    <string name="naa6tdt_submitContactSelect_slidingDrawer_handleNav_title">Select approve submit contact</string>
    <string name="naa6tdt_submitContactSelect_slidingDrawer_handleNav_doneSelectSubmitContacts_button_title">Done</string>
    <string name="title_activity_naa_form_item_editor" translatable="false">NAAFormItemEditorActivity</string>
    <string name="naafie_saveInfo_barButtonItem_title">Save</string>
    <string name="title_activity_naa6task_text6img_attachment_view" translatable="false">NAATaskTextImgAttachmentViewActivity</string>
    <string name="naa_task_imgAttachment_image_imageView_contentDescription" translatable="false">new approve application or iApprove task image attachment image imageView</string>
    <string name="iapprove_listView_item_detailInfo_imageView_contentDescription" translatable="false">the iApprove listView item detail info imageView</string>
    <string name="task_formItem_infoLabel_capitalFormat">%s(Capital)</string>
    <string name="taskAdvice_yesterdayGiven_givenTimestamp">Yesterday</string>
    <string name="taskAdvice_sundayGiven_givenTimestamp">Sunday</string>
    <string name="taskAdvice_mondayGiven_givenTimestamp">Monday</string>
    <string name="taskAdvice_tuesdayGiven_givenTimestamp">Tuesday</string>
    <string name="taskAdvice_wednesdayGiven_givenTimestamp">Wednesday</string>
    <string name="taskAdvice_thursdayGiven_givenTimestamp">Thursday</string>
    <string name="taskAdvice_fridayGiven_givenTimestamp">Friday</string>
    <string name="taskAdvice_saturdayGiven_givenTimestamp">Saturday</string>
    <string name="task_adviceItem_modify_adviceInfo">Modify</string>
    <string name="title_activity_todo_list_tab_content" translatable="false">TodoListTabContentActivity</string>
    <string name="todoList_tab_tag" translatable="false">the to-do list tab</string>
    <string name="todoList_tab_title">To-do</string>
    <string name="tdl_taskSearch_editText_hint">Search</string>
    <string name="tdlt_fetchingData_label">Fetching&#8230;</string>
    <string name="tdl_task_title7applicantName_format" formatted="false">%s(%s)</string>
    <string name="tdl_task_yesterdaySubmit_submitTimestamp">Yesterday</string>
    <string name="tdl_task_sundaySubmit_submitTimestamp">Sunday</string>
    <string name="tdl_task_mondaySubmit_submitTimestamp">Monday</string>
    <string name="tdl_task_tuesdaySubmit_submitTimestamp">Tuesday</string>
    <string name="tdl_task_wednesdaySubmit_submitTimestamp">Wednesday</string>
    <string name="tdl_task_thursdaySubmit_submitTimestamp">Thursday</string>
    <string name="tdl_task_fridaySubmit_submitTimestamp">Friday</string>
    <string name="tdl_task_saturdaySubmit_submitTimestamp">Saturday</string>
    <string name="tdl_newIncomingTask_notification_format">You have %d new to-do tasks</string>
    <string name="iApprove_alertDialog_title">IApprove remind</string>
    <string name="iApprove_alertDialog_cancelButton_title">Cancel</string>
    <string name="title_activity_todo_task_approve" translatable="false">TodoTaskApproveActivity</string>
    <string name="tdta_form_info_label">Form Info</string>
    <string name="tdta_attachment_info_label">Attachment Info</string>
    <string name="task_imageAttachment_imageView_contentDescription" translatable="false">iApprove task image attachment imageView</string>
    <string name="task_voiceAttachment_play_imageView_contentDescription" translatable="false">iApprove task image attachment play imageView</string>
    <string name="task_voiceAttachment_voiceDuration_format" translatable="false">%d\"</string>
    <string name="task_applicationAttachment_icon_imageView_contentDescription" translatable="false">iApprove task application attachment icon imageView</string>
    <string name="tdta_advice_info_label">Advice Info</string>
    <string name="task_advice_advisorAvatar_imageView_contentDescription" translatable="false">iApprove task advice advisor avatar imageView</string>
    <string name="tdta_submitContact_label_textView_text">Recipient:</string>
    <string name="tdta_add_submitContact_imageButton_contentDescription" translatable="false">to-do list task approve add new submit contact imageButton</string>
    <string name="tdta_adviceSwitch_onText">Agree</string>
    <string name="tdta_adviceSwitch_offText">Disagree</string>
    <string name="tdta_adviceSend_button_title">Send</string>
    <string name="ttiamospw_more_operate">More</string>
    <string name="ttiamospw_cpoyText2Clipboard_operate">Copy to clipboard</string>
    <string name="ttiamospw_saveImg2Album_operate">Save to album</string>
    <string name="todoTask_endAlertDialog_message">Are you sure to end the to-do task?</string>
    <string name="todoTask_endAlertDialog_endButton_title">End</string>
    <string name="tdt_approved_notification_format" formatted="false">To-do task %s - %s has been approved</string>
    <string name="common_popupWindow_cancelButton_title">Cancel</string>
    <string name="upst_avatarSetting_userAvatar_label">Avatar</string>
    <string name="upst_avatarSetting_userAvatar_imageView_contentDescription" translatable="false">avatar setting user avatar imageView</string>
    <string name="upstfi_indicator_imageView_contentDescription" translatable="false">user profile setting form item indicator imageView</string>
    <string name="upst_approveNumberUserProfileSettingFormItem_label">Approve ID</string>
    <string name="upst_employeeNameUserProfileSettingFormItem_label">Employee name</string>
    <string name="upst_sexUserProfileSettingFormItem_label">Sex</string>
    <string name="upst_birthdayUserProfileSettingFormItem_label">Birthday</string>
    <string name="upst_departmentUserProfileSettingFormItem_label">Department</string>
    <string name="upst_mobilePhoneUserProfileSettingFormItem_label">Mobile phone</string>
    <string name="upst_officePhoneUserProfileSettingFormItem_label">Office phone</string>
    <string name="upst_emailUserProfileSettingFormItem_label">Email</string>
    <string name="upst_noteUserProfileSettingFormItem_label">What\'s up</string>
    <string name="uaspsspw_photoSourceSelect_takePhotoOperationButton_title">Take photo</string>
    <string name="uaspsspw_photoSourceSelect_choosePhotoOperationButton_title">Choose photo</string>
    <string name="ab_productSmallIcon_imageView_contentDescription" translatable="false">iApprove small icon imageView</string>
    <string name="ab_productName">Walkwork</string>
    <string name="ab_productDescription">Intelligent Choice For Highly Efficient People</string>
    <string name="ab_productVersion_label">Version:</string>
    <string name="ab_termsAndPrivacy">Terms and Privacy</string>
    <string name="ab_copyright" translatable="false">Copyright © 2013</string>
    <string name="ab_copyright_ownership">Nanjing Futuo Network Tech Ltd., All Rights Reserved</string>
</resources>