<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="40dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="40dp"
    tools:context=".assistant.AboutActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <ImageView
                android:id="@+id/ab_productSmallIcon_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ab_productSmallIcon_imageView_contentDescription"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/ab_productSmallIcon_imageView"
                android:shadowColor="@android:color/white"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/ab_productName"
                android:textColor="@android:color/black"
                android:textSize="26sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/ab_productDescription"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ab_productVersion_label"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ab_productVersionName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ab_copyright_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ab_copyright"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/ab_copyright_ownership"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/ab_termsAndPrivacy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ab_copyright_linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:background="@null"
        android:text="@string/ab_termsAndPrivacy"
        android:textColor="@color/terms7privacy_button_title_textcolor"
        android:textSize="16sp" />

</RelativeLayout>