<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_account_setting_for_first_bg"
    android:orientation="vertical"
    android:weightSum="25"
    tools:context=".account.AccountSetting4FirstActivity" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="8" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:contentDescription="@string/as4f_applicationLaunch_imageViewDescription"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="26sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:text="@string/as4f_applicationDescription"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gray" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="17"
        android:background="#393939"
        android:gravity="center_horizontal|bottom" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_margin="22dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/as4f_accountRegister_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:background="@drawable/account_register_button_bg"
                android:shadowColor="@android:color/white"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/as4f_accountRegister_button_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_gray" />

            <Button
                android:id="@+id/as4f_accountLogin_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="40dp"
                android:layout_weight="1"
                android:background="@drawable/account_login_button_bg"
                android:shadowColor="@android:color/black"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/as4f_accountLogin_button_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>