<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popupwindow_mask_transparent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/img_popupwindow_contentview_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="14dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <Button
                android:id="@+id/uaspsspw_photoSourceSelect_takePhoto_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/common_popupwindow_btn_bg"
                android:text="@string/uaspsspw_photoSourceSelect_takePhotoOperationButton_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/uaspsspw_photoSourceSelect_choosePhoto_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/common_popupwindow_btn_bg"
                android:text="@string/uaspsspw_photoSourceSelect_choosePhotoOperationButton_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/uaspsspw_photoSourceSelect_cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/common_popupwindow_cancel_btn_bg"
            android:text="@string/common_popupWindow_cancelButton_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>